fix: add rebuild script for electron-builder + Bun compatibility
- Revert CI back to Bun
- Add 'rebuild' script that electron-builder expects
- Keep postinstall for native dep handling

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:linux": "tsc && vite build && electron-builder --linux",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "rebuild": "echo 'No native modules to rebuild'",
+    "postinstall": "electron-builder install-app-deps"
   },
   "trustedDependencies": [
     "electron",
